force-app/main/default/objects/Mobile_Related_List_Setting__mdt/Mobile_Related_List_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Mobile Related List Setting</label>
    <pluralLabel>Mobile Related List Settings</pluralLabel>
</CustomObject>