force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Get_Field_Labels_from_Record__c.field-meta.xml
<CustomField>
    <fullName>Get_Field_Labels_from_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Field Labels from Record</label>
    <type>Checkbox</type>
</CustomField>