force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>