force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Record_List_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_List_Field_API_Names__c</fullName>
    <label>Record List Field API Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>