force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Record_List_Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>Record_List_Field_Labels__c</fullName>
    <label>Record List Field Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>