force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Redirect_Component__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Component__c</fullName>
    <label>Redirect Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>