force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Redirect_To__c.field-meta.xml
<CustomField>
    <fullName>Redirect_To__c</fullName>
    <description>Enter the Component Name or Id Field to be redirected to</description>
    <label>Redirect To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>