force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Redirect_Type__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Type__c</fullName>
    <label>Redirect Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>