force-app/main/default/objects/Mobile_Related_List_Setting__mdt/fields/Related_List_Title__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Title__c</fullName>
    <label>Related List Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>